Fixes image url

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--googleon: snippet-->
     <div id="mainWrapper" class="container">
         <section id="figure1" class="dont-print">
-            <img alt="Johannes Hoppe" src="images/Johannes_Hoppe.jpg">
+            <img alt="Johannes Hoppe" src="images/johannes_hoppe.jpg">
         </section>
         <section id="about" class="paper dont-print">
             <div class="row">
