Update projects and CV

--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
                     <img alt="Johannes Hoppe" src="images/signature.png" width="320">
                 </a>
             </li>
-            <li><a href="#about">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#vita">Curriculum Vitæ</a></li>
             <li><a href="#references">References</a></li>
-            <li><a href="#contact">Contact</a>
-                <li>
+            <li><a href="#contact">Contact</a><li>
         </ul>
     </nav>
     <!--googleon: snippet-->
@@ -37,7 +36,7 @@
         <section id="figure1" class="dont-print">
             <img alt="Johannes Hoppe" src="images/johannes_hoppe.jpg">
         </section>
-        <section id="about" class="paper dont-print">
+        <section id="projects" class="paper dont-print">
             <div class="row">
                 <blockquote class="pull-right">
                     <p>Don't cry because it's over, smile because it happened.</p>
@@ -51,7 +50,7 @@
             <h3>Veerkant
                 <small><a href="http://www.veerkant.com/">veerkant.com</a></small>
             </h3>
-            <p>Veerkant offers a selection of pieces, chosen for you by our curation experts. By exploring our gallery you bypass the saturation of the mass market. Quality is at the forefront of our operations. We know it can be hard, but we have the right
+            <p>Veerkant offers a selection of fine art pieces. By exploring our gallery you bypass the saturation of the mass market. Quality is at the forefront of our operations. We know it can be hard, but we have the right
                 tools and know-how to ease your decision. Explore and experience on our platform, rest assured that your investment is in the right hands.</p>
             <hr>
             <h3>YOLOsurvey
@@ -62,22 +61,21 @@
             <h3>Lite Desk
                 <small>Deutsche Telekom AG</small>
             </h3>
-            <p>Enterprises are looking for efficient ways to build and rollout the next generation workplace infrastructure.</p>
-
-            <p>Growing numbers of applications are web-based, needing just an Internet connection and a browser. LiteDesk is optimized for this set-up: it has no local files and is easy to administrate centrally.</p>
-
-            <p>LiteDesk helps companies with the migration to web-based workplaces, creating secure, efficient and scalable working environments that are compatible with existing systems.</p>
-
-            <p>Because the LiteDesk workplace is administrated centrally, it requires less investment in infrastructure, administration, support, and training, thus saving costs and resources. What is more, less downtime means higher employee productivity.</p>
-
+            <p>LiteDesk is a browser based operating system similar to Google's Chromebook.</p>
             <p>LiteDesk uses Linux and Mozilla technology with no local user files and no conventional operating system. This means it works in an environment that renders most viruses and Trojans powerless. And because the system is administrated centrally
                 and users don't need to install any software, it stays that way.</p>
             <hr>
-            <iframe width="600" height="340" src="https://www.youtube.com/embed/D9owK6OHUWE?rel=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="600" height="338" src="https://www.youtube.com/embed/D9owK6OHUWE?rel=0" frameborder="0" allowfullscreen></iframe>
             <h3>Music Beam
                 <small><a href="http://www.musicbeam.org/">musicbeam.org</a></small>
             </h3>
             <p>MusicBeam is an open source software which enables you to use your home projector to create an entire laser show for your next party. MusicBeam is music triggered and allows you to adjust nearly every detail of the performance.</p>
+            <hr>
+            <iframe width="600" height="338" src="https://www.youtube.com/embed/wz19OYdz6Do?rel=0" frameborder="0" allowfullscreen></iframe>
+            <h3>Zepp.it
+                <small>Searching made Social</small>
+            </h3>
+            <p>Zepp.it is a graph based search engine to locate service providers within your own social network. Zepp.it was discontinued after Facebook's Graph Search Release in Jan. 2013.</p>
         </section>
         <section id="vita" class="paper">
             <div class="row">
@@ -192,13 +190,25 @@
                     <td width="100">2011&thinsp;&ndash;&thinsp;2012</td>
                     <td>
                         <strong>Advanced Design Thinking</strong>, <a href="http://www.vnrag.de/" class="vitapop" data-original-title="VNR Verlag für die Deutsche Wirtschaft AG<D-r>" data-content="The Verlag für die Deutsche Wirtschaft AG is a publishing firm specialized in consultancy publishing for professional and private clients. With strong regional roots in Bonn, we are now active in eight foreign countries. Our success is based on a diverse portfolio of consulting products, consistently healthy growth for over 30 years and strong innovative drive.">VNR AG</a>,
-                        <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a></td>
+                        <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a>
+                        <ul>
+                            <li>What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
+                            <li>12 week post grad program</li>
+                            <li>single project for business partner</li>
+                        </ul>
+                    </td>
                 </tr>
                 <tr>
                     <td>2011</td>
                     <td>
                         <strong>Basic Design Thinking</strong>, <a href="http://breuninger-stiftung.de/" class="vitapop" data-original-title="Breuninger Stiftung" data-content="Die Breuninger Stiftung wurde 1968 von dem Unternehmer Heinz Breuninger und seiner Tochter Dr. Helga Breuninger aus der Überzeugung heraus gegründet, dass es bei der Lösung gesellschaftlicher Probleme in einer Demokratie auf das Zusammenspiel von Bürgern und Politik ankommt und dass Stiftungen dabei eine gestaltende Rolle einnehmen sollten.">Breuninger Stiftung</a>,
-                        <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a></td>
+                        <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a>
+                        <ul>
+                            <li>What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
+                            <li>12 week undergrad program</li>
+                            <li>5 single projects</li>
+                        </ul>
+                    </td>
                 </tr>
 
                 <tr>
@@ -206,6 +216,10 @@
                     <td>
                         <strong>IT-Systems Engineering</strong>, <a href="http://www.hpi-web.de/" class="vitapop" data-original-title="Hasso Plattner Institut" data-content="In the Institute for Software Systems Engineering, Prof. Hasso Plattner´s foundation has created an academic research institution that, while independent of industry, nevertheless gears its teaching and research activities to the real needs of the IT sector. It is helping to establish IT-Systems Engineering as a scientific discipline. By offering first-class education and research facilities, the Institute sets out to promote the emergence and growth of an engineering culture in the software industry.">Hasso Plattner Institut</a>,
                         University of Potsdam
+                        <ul>
+                            <li>Why <a href="https://www.youtube.com/watch?v=0hI7F2LJX7A" target="_blank">HPI</a> is the best!</li>
+                            <li>Focus on model driven development &amp; semantic analysis.</li>
+                        </ul>
                     </td>
                 </tr>
                 <tr>
@@ -222,7 +236,8 @@
                         <dd>native speaker</dd>
                         <dt>English</dt>
                         <dd>fluent</dd>
-                        <dd>5+ years work experience</dd>
+                        <dt>Spanish<dt>
+                        <dd>beginner</dd>
                     </dl>
                 </div>
                 <div class="span2">
