--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <strong>Advanced Design Thinking</strong>, <a href="http://www.vnrag.de/" class="vitapop" data-original-title="VNR Verlag für die Deutsche Wirtschaft AG<D-r>" data-content="The Verlag für die Deutsche Wirtschaft AG is a publishing firm specialized in consultancy publishing for professional and private clients. With strong regional roots in Bonn, we are now active in eight foreign countries. Our success is based on a diverse portfolio of consulting products, consistently healthy growth for over 30 years and strong innovative drive.">VNR AG</a>,
                         <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a>
                         <ul>
-                            <li>What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
+                            <li class="dont-print">What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
                             <li>12 week post grad program</li>
                             <li>single project for business partner</li>
                         </ul>
@@ -204,7 +204,7 @@
                         <strong>Basic Design Thinking</strong>, <a href="http://breuninger-stiftung.de/" class="vitapop" data-original-title="Breuninger Stiftung" data-content="Die Breuninger Stiftung wurde 1968 von dem Unternehmer Heinz Breuninger und seiner Tochter Dr. Helga Breuninger aus der Überzeugung heraus gegründet, dass es bei der Lösung gesellschaftlicher Probleme in einer Demokratie auf das Zusammenspiel von Bürgern und Politik ankommt und dass Stiftungen dabei eine gestaltende Rolle einnehmen sollten.">Breuninger Stiftung</a>,
                         <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a>
                         <ul>
-                            <li>What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
+                            <li class="dont-print">What is <a href="https://vimeo.com/21568668" target="_blank">Design Thinking</a>?</li>
                             <li>12 week undergrad program</li>
                             <li>5 single projects</li>
                         </ul>
@@ -217,7 +217,7 @@
                         <strong>IT-Systems Engineering</strong>, <a href="http://www.hpi-web.de/" class="vitapop" data-original-title="Hasso Plattner Institut" data-content="In the Institute for Software Systems Engineering, Prof. Hasso Plattner´s foundation has created an academic research institution that, while independent of industry, nevertheless gears its teaching and research activities to the real needs of the IT sector. It is helping to establish IT-Systems Engineering as a scientific discipline. By offering first-class education and research facilities, the Institute sets out to promote the emergence and growth of an engineering culture in the software industry.">Hasso Plattner Institut</a>,
                         University of Potsdam
                         <ul>
-                            <li>Why <a href="https://www.youtube.com/watch?v=0hI7F2LJX7A" target="_blank">HPI</a> is the best!</li>
+                            <li class="dont-print">Why <a href="https://www.youtube.com/watch?v=0hI7F2LJX7A" target="_blank">HPI</a> is the best!</li>
                             <li>Focus on model driven development &amp; semantic analysis.</li>
                         </ul>
                     </td>
@@ -229,7 +229,7 @@
                 </tr>
             </table>
             <div class="row">
-                <div class="span2">
+                <div class="span3">
                     <h3>Languages</h3>
                     <dl>
                         <dt>German</dt>
@@ -240,7 +240,7 @@
                         <dd>beginner</dd>
                     </dl>
                 </div>
-                <div class="span2">
+                <div class="span3">
                     <h3>Qualifications</h3>
                     <dl>
                         <dt>Voice Training</dt>
@@ -251,20 +251,26 @@
                     </dl>
 
                 </div>
-                <div class="span2">
-					<h3>Memberships</h3>
+            </div>
+            <div class="row">
+                <div class="span3">
+					<h3>Awards &amp; Memberships</h3>
                     <dl>
-                        <dt><a href="http://www.mensa.org/">Mensa International</a>
-                            <dt>
-                                <dd>(high IQ society)</dd>
+                        <dt>Business Plan Competition</dt>
+                        <dd>3rd place (2014)</dd>
+                        <dt>Business Plan Competition</dt>
+                        <dd>2nd place (2012)</dd>
+                        <dt><a href="http://www.mensa.org/">Mensa International</a></dt>
+                        <dd>high IQ society (since 2008)</dd>
                     </dl>
-					<h3>IQ test scores</h3>
+                </div>
+                <div class="span3">
+                    <h3>IQ Test Scores</h3>
                     <dl>
                         <dt>MAT</dt>
                         <dd>PR 100</dt>
-                            <dt>CFT-20</dt>
-                            <dd>PR 100
-                                <dd>
+                        <dt>CFT-20</dt>
+                        <dd>PR 100</dd>
                     </dl>
                 </div>
             </div>
