Add new lead developer position

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
             <h2>Work Experience</h2>
             <table class="table">
                 <tr>
-                    <td width="120">2015/04&thinsp;&ndash;&thinsp;today</td>
+                    <td width="120">2016/02&thinsp;&ndash;&thinsp;today</td>
+                    <td>
+                        <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank">Thermondo</a>
+                        <ul>
+                            <li>project management</li>
+                            <li>lead development teams</li>
+                            <li>product management of fulfilment tools</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="120">2015/04&thinsp;&ndash;&thinsp;2016/2</td>
                     <td>
                         <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank">Thermondo</a>
                         <ul>
