--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <td>
                         <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
                         <ul>
-                            <li>managing a 5 person 5</li>
+                            <li>managing a 5 person team</li>
                             <li>business administration</li>
                             <li>product development</li>
                             <li>business development</li>
