Add team lead position

--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
             <h2>Work Experience</h2>
             <table class="table">
                 <tr>
-                    <td width="120">2016/02&thinsp;&ndash;&thinsp;today</td>
+                    <td width="120">2017/01&thinsp;&ndash;&thinsp;today</td>
+                    <td>
+                        <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank">Thermondo</a>
+                        <ul>
+                            <li>manage engineering teams</li>
+                            <li>development of all internal tools</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="120">2016/02&thinsp;&ndash;&thinsp;2016/12</td>
                     <td>
                         <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank">Thermondo</a>
                         <ul>
