--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <strong>Systems Administrator</strong> part time, <a href="http://www.hp-ventures.com/" class="vitapop" data-original-title="Hasso Plattner Ventues" data-content="Hasso Plattner Ventures (HPV) was founded on July 1st, 2005 in Potsdam, Germany. Our mission, instilled by our main investor, Prof. Dr. h.c. Hasso Plattner, founder and chairman of software giant SAP, is to support and inspire young software and IT entrepreneurs in the successful transformation of their ideas into sustainable and viable products and companies, in Germany and abroad.">Hasso Plattner Ventures</a>
                         <ul>
                             <li>2nd Level network support for 60 people</li>
-                            <li>1 level destop support for 10 people</li>
+                            <li>1 level desktop support for 10 people</li>
                             <li>server operations of several AD, storage and mail server</li>
                         </ul>
                     </td>
