Fix facebook url

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <a target="_blank" href="http://de.linkedin.com/pub/johannes-hoppe/36/5a6/924">
               <span class="social x2 social-linked-in linked-in"></span>
             </a>
-            <a target="_blank" href="https://facebook.com/johnknowsbest">
+            <a target="_blank" href="https://facebook.com/codingjoe">
                 <span class="social x2 social-facebook facebook"></span>
             </a>
           </div>
