fix small typos

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>responsible for operations and development of all internal tools</li>
-              <li>line-manage, hiring and leading of multiple teams (15 people)</li>
+              <li>line-management and hiring of multiple teams (15 people)</li>
             </ul>
           </td>
         </tr>
@@ -139,7 +139,7 @@
           <td>
             <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
             <ul>
-              <li>managing a 5 person team</li>
+              <li>managing a small person team</li>
               <li>responsible for platfrom development</li>
             </ul>
         </tr>
