Add durations to all employments

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </td>
         </tr>
         <tr>
-          <td>2016/02&thinsp;&ndash;&thinsp;2016/12</td>
+          <td title="10 month">2016/02&thinsp;&ndash;&thinsp;2016/12</td>
           <td>
             <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
@@ -117,7 +117,7 @@
           </td>
         </tr>
         <tr>
-          <td>2015/04&thinsp;&ndash;&thinsp;2016/2</td>
+          <td title="10 month">2015/04&thinsp;&ndash;&thinsp;2016/2</td>
           <td>
             <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
