--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </td>
         </tr>
         <tr>
-          <td title="10 month">2015/04&thinsp;&ndash;&thinsp;2016/2</td>
+          <td title="10 month">2015/04&thinsp;&ndash;&thinsp;2016/02</td>
           <td>
             <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
@@ -135,7 +135,7 @@
           </td>
         </tr>
         <tr>
-          <td title="4 years">2012&thinsp;&ndash;&thinsp;2015</td>
+          <td title="4 years">2012/03&thinsp;&ndash;&thinsp;2015/10</td>
           <td>
             <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
             <ul>
@@ -179,7 +179,7 @@
       <h2>Education</h2>
       <table class="table table-sm cv">
         <tr>
-          <td title="12 weeks">2012</td>
+          <td title="12 weeks">2011&thinsp;&ndash;&thinsp;2012</td>
           <td>
             <strong>Advanced Design Thinking</strong>, <a href="http://www.vnrag.de/" class="vitapop" data-original-title="VNR Verlag für die Deutsche Wirtschaft AG<D-r>" data-content="The Verlag für die Deutsche Wirtschaft AG is a publishing firm specialized in consultancy publishing for professional and private clients. With strong regional roots in Bonn, we are now active in eight foreign countries. Our success is based on a diverse portfolio of consulting products, consistently healthy growth for over 30 years and strong innovative drive.">VNR AG</a>,
             <a href="http://www.hpi.uni-potsdam.de/d_school/" data-toggle="popover" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI d.school</a>
