--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <tr>
           <td>2017/01&thinsp;&ndash;&thinsp;today</td>
           <td>
-            <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>responsible for operations and development of all internal tools</li>
               <li>line-management and hiring of multiple teams (15 people)</li>
@@ -109,7 +109,7 @@
         <tr>
           <td title="10 month">2016/02&thinsp;&ndash;&thinsp;2016/12</td>
           <td>
-            <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>tech. lead Python</li>
               <li>product management of all fulfilment tools</li>
@@ -119,7 +119,7 @@
         <tr>
           <td title="10 month">2015/04&thinsp;&ndash;&thinsp;2016/02</td>
           <td>
-            <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>leading small teams (5 people)</li>
             </ul>
@@ -128,7 +128,7 @@
         <tr>
           <td title="11 month">2014/05&thinsp;&ndash;&thinsp;2015/04</td>
           <td>
-            <strong>Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>model driven development with a focus on automation</li>
             </ul>
