Add reference by kristofer

--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
       </blockquote>
 
       <blockquote>
+        <p>Johannes joined Thermondo even thought he could have picked from a variety of companies - but he chose a business that is aligned with his ideas and that he finds worthy to work for. This decision has always accompanied him during our shared time at Thermondo and made him not only work hard and deliver on his job, but also go beyond and invest in the social ecosystem of the tech team and the whole company. Thank you!</p>
+        <footer class="blockquote-footer">Kristofer Fichtner (Co-Founder @ Thermondo)</footer>
+      </blockquote>
+
+      <blockquote>
         <p>Es ist immer gut, wenn man weiß, dass man sich auf bestimmte Leute verlassen kann.</p>
         <footer class="blockquote-footer">Dr. Dirk Barchmann (CEO @ Institut f&uuml;r Verhaltenstherapie)</footer>
       </blockquote>
