Update LinkedIn url

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <a target="_blank" href="https://github.com/codingjoe">
                 <span class="social x2 social-github github"></span>
             </a>
-            <a target="_blank" href="http://de.linkedin.com/pub/johannes-hoppe/36/5a6/924">
+            <a target="_blank" href="https://www.linkedin.com/in/codingjoe">
               <span class="social x2 social-linked-in linked-in"></span>
             </a>
             <a target="_blank" href="https://facebook.com/codingjoe">
