Add calendly coffee link

--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
       </blockquote>
 
       <blockquote>
-        <p>Johannes joined Thermondo even thought he could have picked from a variety of companies - but he chose a business that is aligned with his ideas and that he finds worthy to work for. This decision has always accompanied him during our shared time at Thermondo and made him not only work hard and deliver on his job, but also go beyond and invest in the social ecosystem of the tech team and the whole company. Thank you!</p>
+        <p>Johannes joined Thermondo even thought he could have picked from a variety of companies - but he chose a business that is aligned with his ideas and that he finds worthy to work for. This decision has always accompanied him during our shared time
+          at Thermondo and made him not only work hard and deliver on his job, but also go beyond and invest in the social ecosystem of the tech team and the whole company. Thank you!</p>
         <footer class="blockquote-footer">Kristofer Fichtner (Co-Founder @ Thermondo)</footer>
       </blockquote>
 
@@ -289,29 +290,34 @@
       <div class="page-header">
         <h1>Contact</h1>
       </div>
+      <p>Want to chat? <a href="https://calendly.com/codingjoe/coffee" target="_blank">Let's grab a coffee together!</a></p>
       <div class="row">
         <div id="contact_images" class="col">
           <div class="row">
-            <a target="_blank" href="https://github.com/codingjoe">
+            <div class="col">
+              <a target="_blank" href="https://github.com/codingjoe">
                 <span class="social x2 social-github github"></span>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/codingjoe">
+              <a target="_blank" href="https://www.linkedin.com/in/codingjoe">
               <span class="social x2 social-linked-in linked-in"></span>
             </a>
-            <a target="_blank" href="https://facebook.com/codingjoe">
+              <a target="_blank" href="https://facebook.com/codingjoe">
                 <span class="social x2 social-facebook facebook"></span>
             </a>
+            </div>
           </div>
           <div class="row">
-            <a target="_blank" href="https://twitter.com/johannes_hoppe">
+            <div class="col">
+              <a target="_blank" href="https://twitter.com/johannes_hoppe">
                 <span class="social x2 social-twitter twitter"></span>
             </a>
-            <a target="_blank" href="mailto:Johannes%20Hoppe%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
+              <a target="_blank" href="mailto:Johannes%20Hoppe%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
                 <span class="social x2 social-e-mail email"></span>
             </a>
-            <a target="_blank" href="http://stackexchange.com/users/327522">
+              <a target="_blank" href="http://stackexchange.com/users/327522">
                 <span class="social x2 social-stackexchange stackexchange"></span>
             </a>
+            </div>
           </div>
         </div>
         <div class="col">
