Add new position

--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
       <h2>Work Experience</h2>
       <table class="table cv table-sm">
         <tr>
+          <td>2018/12&thinsp;&ndash;&thinsp;today</td>
+          <td>
+            <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <ul>
+              <li>in-house consulting</li>
+              <li>restructuring the existing service organization</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
           <td>2017/01&thinsp;&ndash;&thinsp;today</td>
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
