Add voiio to CV

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
       <h2>Work Experience</h2>
       <table class="table cv table-sm">
         <tr>
-          <td>2018/12&thinsp;&ndash;&thinsp;today</td>
+          <td>2019/06&thinsp;&ndash;&thinsp;today</td>
+          <td>
+            <strong>Chief Technology Officer (CTO)</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
+          </td>
+        </tr>
+        <tr>
+          <td>2018/12&thinsp;&ndash;&thinsp;2019/05</td>
           <td>
             <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
